# learncpp

./: .clang-format  .clangd  .editorconfig  .gitignore  CMakeLists.txt  README.md  adriLove.py  environment.yml  main  test  test.py
.cache/clangd/index/: io.cpp.6A1050750BBCF7F5.idx  io.h.0B92ACA2C25C4A16.idx  main.cpp.D8FB636A1615CA5D.idx  passport.cpp.3921B2EC8E12BD3D.idx  passport.h.1B43A5CADB299256.idx  test_library.cpp.27AA8B56D36072F0.idx
include/: initialization.h  io.h  library.h  passport.h
src/: CMakeLists.txt  app  constants.h  io.cpp  io.h  library.cpp  main  main.cpp  passport  passport.cpp  point  pointerShen.cpp  test
tests/: CMakeLists.txt  test_library.cpp
